# FYP

./: .gitignore  GOOGLE_OAUTH_SETUP.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.ps1
backend/app/: __init__.py  main.py
backend/app/api/routes/: ai_guidance.py  auth.py  dashboard.py  insights.py  jobs.py  profiles.py  recommendations.py
backend/app/core/: auth.py  config.py  database.py  logging.py
data-pipeline/: README.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/ai-guidance/: page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: footer.tsx  insight-highlights.tsx  market-pulse-ticker.tsx  navigation.tsx  providers.tsx  skeleton.tsx
frontend/components/dashboard/: career-recommendations.tsx  job-alerts.tsx  learning-path.tsx  profile-summary.tsx  salary-trend-chart.tsx  skill-gap-radar.tsx
frontend/components/onboarding/: onboarding-flow.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: types.ts  utils.ts
frontend/styles/: globals.css
infra/: docker-compose.yml
