[tool.poetry]
name = "career-compass-backend"
version = "0.1.0"
description = "FastAPI backend for the Career Compass platform"
authors = ["Career Compass Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
openai = "^1.30.1"
anthropic = "^0.39.0"
langchain = "^0.1.20"
langchain-openai = "^0.1.7"
pgvector = "^0.2.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
rapidfuzz = "^3.6.1"
duckdb = "^0.10.1"
autogluon = "^1.1.0"
structlog = "^24.1.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
